--- a/packages/ui/src/styles/_components.scss
+++ b/packages/ui/src/styles/_components.scss
@@ -29,5 +29,6 @@
 @import 'components/tabs';
 @import 'components/tag';
 @import 'components/textarea';
+@import 'components/time-picker';
 @import 'components/toast';
 @import 'components/tooltip';
