--- a/packages/ui/src/styles/_components.scss
+++ b/packages/ui/src/styles/_components.scss
@@ -10,6 +10,7 @@
 @import 'components/cascader';
 @import 'components/checkbox';
 @import 'components/compose';
+@import 'components/date-picker';
 @import 'components/drawer';
 @import 'components/dropdown';
 @import 'components/empty';
